<resources>
    <!--Application-->
    <string name="app_name">Parks</string>
    <!--Default-->
    <string name="navigation_drawer_open">Abrir Navegador</string>
    <string name="navigation_drawer_close">Cerrar Navegador</string>
    <!--Menu-->
    <string name="inicio">Inicio</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="status">Estado de la sincronización</string>
    <string name="historial">Historial</string>
    <string name="travesia">Travesia</string>
    <!--Login-->
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="entrar">Entrar</string>
    <!--Home-->
    <string name="travesia_actual">Travesia Actual</string>
    <string name="sgn_desc">Sistema de Gestión Naval</string>
    <!--Travesias-->
    <string name="travesia_destino">Destino:</string>
    <string name="travesia_responsable1">Responsable 1:</string>
    <string name="travesia_responsable2">Responsable 2:</string>
    <string name="travesia_fecha_inicio">Fecha de partida:</string>
    <!--Placeholder-->
    <string name="ph_unidad">Unidad: %1$s</string>
    <string name="ph_destino">Destino: %1$s</string>
    <string name="ph_unidad_fragment">Módulo: %1$s - Seleccionar Unidad:</string>
    <string name="ph_travesia_fragment">Unidad: %1$s - Seleccionar Travesia:</string>
</resources>