<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/nav_travesia"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/travesia"/>
        <item
            android:id="@+id/nav_status"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/status" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/historial" />
        <item
            android:id="@+id/nav_sincronizar"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/sincronizar" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/cerrar_sesion" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
