<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zentcode.parks.LoginActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading_white"
            android:textAlignment="center"
            android:textSize="26sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/subheading_white"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_user"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorText"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/subheading_white"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:textColor="@color/colorText"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:text="@string/entrar"
                style="@style/button_secondary"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>